feat: implement Connexa core event platform workflows
- add Android event discovery, calendar, attendance, assistant, notification, and organizer experiences
- add protected API endpoints, contracts, and fail-closed integration boundaries
- add a safe ingestion workflow with automated tests
- align documentation, verification, and build configuration